@@ -1,10 +1,10 @@
-package com.pos.order.integration;
+package com.pos.order.integration.dao;
 
 import com.pos.dao.OrderDao;
-import com.pos.setup.AbstractDaoTest;
-import com.pos.setup.TestEntities;
 import com.pos.model.constants.OrderStatus;
 import com.pos.pojo.Order;
+import com.pos.setup.AbstractDaoTest;
+import com.pos.setup.TestFactory;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -14,37 +14,37 @@ import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
-@Import(OrderDao.class)
+@Import({OrderDao.class, TestFactory.class})
 class OrderDaoTest extends AbstractDaoTest {
 
     @Autowired
     private OrderDao dao;
 
+    @Autowired
+    private TestFactory testFactory;
+
     @BeforeEach
-    void clean() {
-        em.createNativeQuery("DELETE FROM pos_order_item").executeUpdate();
-        em.createNativeQuery("DELETE FROM pos_order").executeUpdate();
-        em.flush();
-        em.clear();
+    void setupData() {
+        // keep empty: don't insert shared rows here (keeps tests isolated)
     }
 
     @Test
     void searchWhenStatusProvided() {
-        persist(TestEntities.order(OrderStatus.CREATED, "inv"));
-        Order invoiced = persist(TestEntities.order(OrderStatus.INVOICED, "inv"));
+        testFactory.createOrder(OrderStatus.CREATED, "inv");
+        Order invoiced = testFactory.createOrder(OrderStatus.INVOICED, "inv");
         em.clear();
 
         List<Order> out = dao.search(null, null, null, OrderStatus.INVOICED, 0, 10);
 
         assertEquals(1, out.size());
-        assertEquals(invoiced.getId(), out.get(0).getId());
+        assertEquals(invoiced.getId(), out.getFirst().getId());
     }
 
     @Test
     void getCountWhenFiltersProvided() {
-        persist(TestEntities.order(OrderStatus.INVOICED, "inv"));
-        persist(TestEntities.order(OrderStatus.INVOICED, "inv"));
-        persist(TestEntities.order(OrderStatus.CREATED, "inv"));
+        testFactory.createOrder(OrderStatus.INVOICED, "inv");
+        testFactory.createOrder(OrderStatus.INVOICED, "inv");
+        testFactory.createOrder(OrderStatus.CREATED, "inv");
         em.clear();
 
         assertEquals(2, dao.getCount(null, null, null, OrderStatus.INVOICED));
